--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,14 @@
 FROM node:14.17.0
 
-ARG proxy_username
-ARG proxy_password
-ARG proxy_host
-ARG proxy_port
+ARG http_proxy
+ARG https_proxy
 
-RUN mkdir /frontend
-WORKDIR /frontend
+COPY package* .
 
-COPY package.json /frontend/package.json
+RUN npm config set proxy ${http_proxy}
+RUN npm config set https-proxy ${https_proxy}
 
-RUN npm config set proxy http://${proxy_username}:${proxy_password}@${proxy_host}:${proxy_port}
-RUN npm config set https-proxy http://${proxy_username}:${proxy_password}@${proxy_host}:${proxy_port}
+RUN npm ci
 
-RUN npm install
+COPY src/ /src/
+COPY public/ /public/
